--- a/login/login.html
+++ b/login/login.html
@@ -2,7 +2,7 @@
  * @Author: jiangxx 18635949970@163.com
  * @Date: 2022-11-22 11:34:28
  * @LastEditors: jiangxx 18635949970@163.com
- * @LastEditTime: 2022-11-28 16:51:09
+ * @LastEditTime: 2022-11-29 13:53:10
  * @FilePath: \machenike-KT68c:\Users\18635\Desktop\login\login.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -118,10 +118,11 @@
         ],
         siginData: {},// 注册成功后回传过来的数据
     },
-    mounted () {
+    mounted: function () {
       this.handleToast()
     },
     methods: {
+      // toast提示
       handleToast: function () {
         const ToastContrustor = Vue.extend(Toast)
         Vue.prototype.$toast = function (message, type, delayer = 3000) {
